test code for live from web

--- a/src/app/recorderv10.html
+++ b/src/app/recorderv10.html
@@ -2,6 +2,7 @@
 
 <head>
     <script src="js/jquery-2.0.0.min.js"></script>
+    <script src="js/lame.min.js"></script>
     <script src="js/socket.io.min.js"></script>
     <script src="jst/h5recorderv10.js"></script>
 </head>
@@ -14,7 +15,7 @@
     <button id='encode' onclick="t()">saveAudio1</button><br/>
     <audio id='v1' autoplay></audio>
     <video id='v0' controls autoplay width="200" height="200" loop src="f0.mp4"></video>
-    <canvas visible width="200" height="200"></canvas>
+    <canvas visible width="500" height="500"></canvas>
     <video id="video-sample" data-dashjs-player controls="true" width="90%"></video>
 
     <script>
